--- a/boostrap/ninestar/ninestar.html
+++ b/boostrap/ninestar/ninestar.html
@@ -14,7 +14,7 @@
 	<link rel="stylesheet" href="owlCarousel/owl.theme.default.min.css">
   </head>
   <body>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    
 	
 	<section id="header">
 		<nav class="navbar navbar-expand-lg navbar-light bg-white shadow-sm py-2">
@@ -392,7 +392,7 @@
 		</section>
 	 </section>
   </section>
-  <section class="client" data-aos="fade-up" data-aos-duration="1000">
+  <section class="client pt-5 pb-5 " data-aos="fade-up" data-aos-duration="1000">
      <section class="container">
 	    <section class="clientCont"> 
 	    <div data-aos="fade-up" data-aos-duration="2000">
@@ -450,9 +450,7 @@
 					}
 				})
 			</script>
-			<script src="https://code.iconify.design/iconify-icon/1.0.1/iconify-icon.min.js"></script>	
-	<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
+			
   <section class="con" data-aos="fade-up" data-aos-duration="1000">
 	    <div class="container" id="cont">
 		    <div class="contact">
@@ -595,6 +593,18 @@
 			</div>
 		</div>
 	</section>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
+	
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+	<script>
+        const navLinks=document.querySelectorAll(".nav-item") ;
+        const  menuToggle=document.getElementById("navbarNavDropdown");
+        let bsCollabse=new bootstrap.Collapse(menuToggle,{toggle:false})
+        navLinks.forEach((e) =>{
+            e.addEventListener("click",()=>{bsCollabse.toggle()})
+        })
+      </script>	
+	  
 	
 <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 <script>
