--- a/boostrap/ninestar/ninestar.html
+++ b/boostrap/ninestar/ninestar.html
@@ -62,8 +62,8 @@
 		</nav>
 	</section>
   <section class="digital" id="home">
-     <section class="container">
-	    <section class="row head">
+     <div class="container">
+	    <div class="row head">
 		   <div  class="col-12 col-sm-12 col-md-12 col-lg-6 mt-4 order-1 order-lg-0">
 		      <h3>Bettter digital experience with Ninestar</h3>
 			  <p>We are team of talented designers making websites with Bootstrap</p>
@@ -72,12 +72,12 @@
 		   <div class="col-12 col-sm-12 col-md-12 col-lg-6 order-0 order-lg-1">
 		      <img src="img/hero.svg" width=100%>
 		   </div>
-		</section>
-	 </section>
+		</div>
+	 </div>
   </section>
   <section class="about" id="abt">
-     <section class="container">
-	    <section class="row">
+     <div class="container">
+	    <div class="row">
 		   <div class="col-12 col-sm-12 col-md-12 col-lg-6" data-aos="zoom-in" data-aos-duration="1000">
 		      <img src="img/about.svg" width=100%> 	
 		   </div>
@@ -101,12 +101,12 @@
 			  </div>
 			  </div>
 		   </div>
-		</section>
-	 </section>
+		</div>
+	 </div>
   </section>
   <section class="services" id="ser" data-aos="fade-up" data-aos-duration="1000">
-     <section class="container">
-	    <section>
+     <div class="container">
+	    <div>
 		   <div class="servicesHead">
 		      <h3>Services</h3>
 			  <h2>Check out the great services we offer</h2>
@@ -133,12 +133,12 @@
 				 <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum</p>
 			  </div>
 		   </div>
-		</section>
-	 </section>
+		</div>
+	 </div>
   </section>
   <section class="portfolio" id="port">
-     <section class="container">
-	    <section data-aos="fade-up" data-aos-duration="1000">
+     <div class="container">
+	    <div data-aos="fade-up" data-aos-duration="1000">
 		   <div class="portHead">
 		      <h3>Portfolio</h3>
 			  <h2>Check out our beautifull portfolio</h2>
@@ -247,8 +247,8 @@
 			           </div>
 			     </div>
 		   </div>
-		</section>
-	 </section>
+		</div>
+	 </div>
   </section>
   <section class="section5 pt-5" data-aos="fade-up" data-aos-duration="1000">
 	    <div class="container">
@@ -321,8 +321,8 @@
 		</div>
 	</section>
   <section class="team" id="teams">
-     <section class="container">
-	    <section data-aos="fade-up" data-aos-duration="1000">
+     <div class="container">
+	    <div data-aos="fade-up" data-aos-duration="1000">
 		   <div class="row teamCont">
 		      <h3>Team</h3>
 			  <h2>Our team is always here to help</h2>
@@ -389,12 +389,12 @@
 					</div>
 			  </div>
 		   </div>
-		</section>
-	 </section>
+		</div>
+	 </div>
   </section>
   <section class="client pt-5 pb-5 " data-aos="fade-up" data-aos-duration="1000">
-     <section class="container">
-	    <section class="clientCont"> 
+     <div class="container">
+	    <div class="clientCont"> 
 	    <div data-aos="fade-up" data-aos-duration="2000">
 		      <h3>Clients</h3>
 			  <h2>They trusted us</h2>
@@ -424,8 +424,8 @@
 					<img src="img/client-8.png">
 				</div>
 			</div>
-		</section>
-	 </section>
+		</div>
+	 </div>
   </section>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
 			<script src="owlCarousel/owl.carousel.min.js"></script>
@@ -596,14 +596,14 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
 	
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-	<script>
-        const navLinks=document.querySelectorAll(".nav-item") ;
-        const  menuToggle=document.getElementById("navbarNavDropdown");
-        let bsCollabse=new bootstrap.Collapse(menuToggle,{toggle:false})
-        navLinks.forEach((e) =>{
-            e.addEventListener("click",()=>{bsCollabse.toggle()})
-        })
-      </script>	
+	<!-- <script> -->
+        <!-- const navLinks=document.querySelectorAll(".nav-item") ; -->
+        <!-- const  menuToggle=document.getElementById("navbarNavDropdown"); -->
+        <!-- let bsCollabse=new bootstrap.Collapse(menuToggle,{toggle:false}) -->
+        <!-- navLinks.forEach((e) =>{ -->
+            <!-- e.addEventListener("click",()=>{bsCollabse.toggle()}) -->
+        <!-- }) -->
+      <!-- </script>	 -->
 	  
 	
 <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
