--- a/own-practice/programs.html
+++ b/own-practice/programs.html
@@ -4,9 +4,7 @@
     <meta charset="UTF-8">
 	<meta http-eqiv="X-UA-compatible" content="IE=Rdge">
 	<meta name="viewport" content="width=device-width,initial-scale=1.0">
-	<title>Resume</title>
-	<link rel="stylesheet" href="reset.css">
-	<link rel="stylesheet" href="resume.css">
+	<title>programs</title>
 </head>
 <body>
 
