--- a/js/task/prototype.html
+++ b/js/task/prototype.html
@@ -8,106 +8,162 @@
 </head>
 <body>
    <script>
-      // concat
-	  {let arr1=["mango", "apple", "orange"];
-	   let arr2=["graps", "banana"];
-	   let array=arr1.concat(arr2);
-	   console.log(array);
-	  }
+      <!-- // concat -->
+	  <!-- {let arr1=["mango", "apple", "orange"]; -->
+	   <!-- let arr2=["graps", "banana"]; -->
+	   <!-- let array=arr1.concat(arr2); -->
+	   <!-- console.log(array); -->
+	  <!-- } -->
 	  
-	  // every
-	  {let str = [ 12, 23, 34, 45];
-	  let res = (resu) => resu < 10;
-	  console.log(str.every(res));}
+	  <!-- // every -->
+	  <!-- {let str = [ 12, 23, 34, 45]; -->
+	  <!-- let res = (resu) => resu < 10; -->
+	  <!-- console.log(str.every(res));} -->
 	  
-	   // some
-	  {let str = [ 12, 23, 34, 45];
-	  let res = (resu) => resu < 20;
-	  console.log(str.some(res));}
+	   <!-- // some -->
+	  <!-- {let str = [ 12, 23, 34, 45]; -->
+	  <!-- let res = (resu) => resu < 20; -->
+	  <!-- console.log(str.some(res));} -->
 	  
-	  // forEach
-	  {const flowers=["rose", "lotus", "lilly", "sunflower"];
-	  flowers.forEach(function (arrayvalue,index,array){
-	     console.log(arrayvalue);
-		 console.log(index);
-		 console.log(array);
-	  });}
+	  <!-- // forEach -->
+	  <!-- {const flowers=["rose", "lotus", "lilly", "sunflower"]; -->
+	  <!-- flowers.forEach(function (arrayvalue,index,array){ -->
+	     <!-- console.log(arrayvalue); -->
+		 <!-- console.log(index); -->
+		 <!-- console.log(array); -->
+	  <!-- });} -->
 	  
-	  // map
-	  flowers=["rose", "lotus", "lilly", "sunflower"];
-	   const newArray=flowers.map(function(flower){
-	     return flower.toUpperCase();
-	  });
-	     console.log(newArray);
+	  <!-- // map -->
+	  <!-- flowers=["rose", "lotus", "lilly", "sunflower"]; -->
+	   <!-- const newArray=flowers.map(function(flower){ -->
+	     <!-- return flower.toUpperCase(); -->
+	  <!-- }); -->
+	     <!-- console.log(newArray); -->
 	  
-	  // push
-	 flowers=["rose", "lotus", "lilly"];
-	 flowers.push("sunflower");
-	 console.log(flowers);
+	  <!-- // push -->
+	 <!-- flowers=["rose", "lotus", "lilly"]; -->
+	 <!-- flowers.push("sunflower"); -->
+	 <!-- console.log(flowers); -->
 	  
-	  // unshift
-	  flowers=["rose", "lotus", "lilly",];
-	  flowers.unshift("sunflower");
-	  console.log(flowers);
+	  <!-- // unshift -->
+	  <!-- flowers=["rose", "lotus", "lilly",]; -->
+	  <!-- flowers.unshift("sunflower"); -->
+	  <!-- console.log(flowers); -->
 	  
-	  // splice
-	  flowers=["rose", "lotus", "lilly", "sunflower"];
-	  flowers.splice(2,3);
-	  console.log(flowers);
+	  <!-- // splice -->
+	  <!-- flowers=["rose", "lotus", "lilly", "sunflower"]; -->
+	  <!-- flowers.splice(2,3); -->
+	  <!-- console.log(flowers); -->
 	  
-	  // pop
-	  fruits=["mango", "apple", "banana", "graps"];
-	  fruit=fruits.length;
-	  console.log(fruit);
-	  fruits.pop();
-	  console.log(fruits);
+	  <!-- // pop -->
+	  <!-- fruits=["mango", "apple", "banana", "graps"]; -->
+	  <!-- fruit=fruits.length; -->
+	  <!-- console.log(fruit); -->
+	  <!-- fruits.pop(); -->
+	  <!-- console.log(fruits); -->
 	  
-	  // shift
-	  flowers=["rose", "lotus", "lilly", "sunflower"];
-	  flowers.shift();
-	  console.log(flowers);
+	  <!-- // shift -->
+	  <!-- flowers=["rose", "lotus", "lilly", "sunflower"]; -->
+	  <!-- flowers.shift(); -->
+	  <!-- console.log(flowers); -->
 	  
-	  // revers
-	  flowers=["rose", "lotus", "lilly", "sunflower"];
-	  flower=flowers.reverse();
-	  console.log(flower);
+	  <!-- // revers -->
+	  <!-- flowers=["rose", "lotus", "lilly", "sunflower"]; -->
+	  <!-- flower=flowers.reverse(); -->
+	  <!-- console.log(flower); -->
 	  
-	  // indexOf
-	  flowers=[1,4,2,3,4,5,"3"];
-      flower=flowers.indexOf(4);
-	  console.log(flower);
+	  <!-- // indexOf -->
+	  <!-- flowers=[1,4,2,3,4,5,"3"]; -->
+      <!-- flower=flowers.indexOf(4); -->
+	  <!-- console.log(flower); -->
 	  
 	  
-	  // lastindexOf
-	  flowers=[1,4,2,3,4,5,"3"];
-      flower=flowers.lastIndexOf(4);
-	  console.log(flower);
+	  <!-- // lastindexOf -->
+	  <!-- flowers=[1,4,2,3,4,5,"3"]; -->
+      <!-- flower=flowers.lastIndexOf(4); -->
+	  <!-- console.log(flower); -->
 	  
-	  // sort
-	  let nums=[1, 11, 21, 110];
-	  let num=nums.sort();
-	  console.log(num);
+	  <!-- // sort -->
+	  <!-- let nums=[1, 11, 21, 110]; -->
+	  <!-- let num=nums.sort(); -->
+	  <!-- console.log(num); -->
 	  
-	  // slice
-	  {const fruits = ["Banana", "Orange", "Lemon", "Apple", "Mango"];
-      const fruit = fruits.slice(1, 3);
-	  console.log(fruit); }
+	  <!-- // slice -->
+	  <!-- {const fruits = ["Banana", "Orange", "Lemon", "Apple", "Mango"]; -->
+      <!-- const fruit = fruits.slice(1, 3); -->
+	  <!-- console.log(fruit); } -->
 	  
-	  // join
-	  {const fruits = ["Banana", "Orange", "Lemon", "Apple", "Mango"];
-      const fruit = fruits.join(' ');
-	  console.log(fruit); }
+	  <!-- // join -->
+	  <!-- {const fruits = ["Banana", "Orange", "Lemon", "Apple", "Mango"]; -->
+      <!-- const fruit = fruits.join(' '); -->
+	  <!-- console.log(fruit); } -->
 	  
-	  // reduce
-	  {var number = [1,2,3,4,5]
-	   var res= number.reduce(function(pre,cur){
-	   var sum=(pre+cur);
-	   return sum;
-	  })
-	   console.log(res);
+	  <!-- // reduce -->
+	  <!-- {var number = [1,2,3,4,5] -->
+	   <!-- var res= number.reduce(function(pre,cur){ -->
+	   <!-- var sum=(pre+cur); -->
+	   <!-- return sum; -->
+	  <!-- }) -->
+	   <!-- console.log(res); -->
+	   <!-- } -->
+	 
+	  <!-- //includes -->
+	  <!-- var fruit = ['mango', 'apple', 'banana']; -->
+	  <!-- console.log(fruit.includes('banana')); -->
+   
+     <!-- //find  -->
+	  <!-- var age=[11,22,12,31,23,7] -->
+	  <!-- var age1=age.find(function value(ages){ -->
+	 
+	  <!-- return (ages>10); -->
+	  <!-- }) -->
+	  <!-- console.log(age1) -->
+	
+	<!-- //filter -->
+	<!-- const filtered = [10, 12, 22, 33].filter(fil); -->
+	<!-- function fil(a) { -->
+	<!-- return a >= 20; -->
+	<!-- } -->
+	<!-- console.log(filtered) -->
+	  
+	<!-- var numbers = [12, 10, 15, -11, -14, 13, 16];   -->
+	  
+	<!-- function bubbleSort(array) { -->
+	  <!-- var done = false; -->
+	  <!-- while (!done) { -->
+		<!-- done = true; -->
+		<!-- for (var i = 1; i < array.length; i += 1) { -->
+		  <!-- if (array[i - 1] > array[i]) { -->
+			<!-- done = false; -->
+			<!-- var tmp = array[i - 1]; -->
+			<!-- array[i - 1] = array[i]; -->
+			<!-- array[i] = tmp; -->
+		  <!-- } -->
+		<!-- } -->
+	  <!-- } -->
+	  <!-- return array; -->
+	<!-- } -->
+	<!-- bubbleSort(numbers); -->
+	
+	<!-- console.log(numbers); -->
+	
+	var numbers = [12, 10, 15, -11, -14, 13, 16];
+	
+	function myFun(array){
+	   for( i=1; i<array.length; i++){
+	      if(array[i-1] > array[i]){
+		     var tmp = array[i - 1];
+			 array[i - 1] = array[i];
+			 array[i] = tmp;
+		  }
 	   }
+	}
+	myFun(numbers);
+	
+	console.log(numbers);
+			  
+		  
 	  
-	  // filter find includes 
 	  
    
    </script>
