--- a/own-practice/object.html
+++ b/own-practice/object.html
@@ -79,8 +79,17 @@
 	   <!-- } -->
 	<!-- } -->
 	<!-- console.log(user); -->
-	 
-	 
+	
+	user={
+	   name:'saran',
+	   age:21,
+	}
+	for(let key in user){
+	   console.log(user[key]);
+	}
+	
+	
+	
   </script>
 </body>
 </html>
