--- a/react/callback.html
+++ b/react/callback.html
@@ -83,14 +83,33 @@
    <!-- console.log(a,c) -->
    
    
+  <!-- function myFun(a,b){ -->
+     <!-- return a+b; -->
+  <!-- } -->
+  <!-- console.log(myFun(2,3)); -->
   
-   
-   
+  // shallow deep copy
+  <!-- let arr1 = [1, 2, 3, 4]; -->
+  <!-- let arr2 = [...arr1]; -->
+  <!-- arr1[0]= 10; -->
+  <!-- console.log(arr1); -->
+  <!-- console.log(arr2); -->
   
-    
-   
-
-   
+  // promise
+  
+ <!-- let main = new Promise(function(resolve, reject){ -->
+    <!-- setTimeout(function(){ -->
+	     <!-- resolve(); -->
+	<!-- },3000); -->
+ <!-- }) -->
+ <!-- main -->
+    <!-- .then(function(resolve){ -->
+	   <!-- console.log('this promise is success'); -->
+	<!-- }) -->
+	<!-- .catch(function(reject){ -->
+	    <!-- console.log('this promise is reject'); -->
+	<!-- }) -->
+	
    </script>
 </body>
 </html>
